--- a/themes/papermod/theme.toml
+++ b/themes/papermod/theme.toml
@@ -1,7 +1,8 @@
 # theme.toml template for a Hugo theme
 # See https://github.com/gohugoio/hugoThemes#themetoml for an example
 
-name = "papermod"
+
+name = "PaperMod"
 license = "MIT"
 licenselink = "https://github.com/adityatelange/hugo-PaperMod/blob/master/LICENSE"
 description = "A fast, clean, responsive Hugo theme"
@@ -17,6 +18,7 @@ tags = [
   "highlight.js",
   "search"
 ]
+
 features = [
   "responsive",
   "single-column",
