--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://devtech23.github.io/"
+baseURL = "https://eric-nobrega.github.io/devtech23/"
 title = "devTech 23"
 paginate = 5
 theme = "PaperMod"
