--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://eric-nobrega.github.io/devtech23"
+baseURL = "https://eric-nobrega.github.io/devtech23/"
 title = "devTech 23"
 paginate = 5
 theme = "PaperMod"
@@ -16,14 +16,6 @@ enabled = false
 title = "papermod"
 imageUrl = "#"
 imageTitle = "my image"
-
-[[params.profileMode.buttons]]
-name = "Archives"
-url = "archives"
-
-[[params.profileMode.buttons]]
-name = "Tags"
-url = "tags"
 
 [params.homeInfoParams]
 Title = "devTech 23"
@@ -74,55 +66,3 @@ Content = """
 <br> &nbsp; &nbsp; &nbsp; &rarr; Software Development Lifecycle
 </details>
 """
-
-[[params.socialIcons]]
-    
-    
-    
-    name = "github"                                         
-url = "https://github.com/Eric-Nobrega"
-                                                                                        
-[[params.socialIcons]]
-name = "KoFi"
-url = "https://ko-fi.com/adityatelange"
-
-[[params.socialIcons]]
-name = "Rss"
-url = "index.xml"
-
-[params.editPost]
-URL = "https://github.com/adityatelange/hugo-PaperMod/tree/exampleSite/content"
-Text = "Suggest Changes"
-appendFilePath = true
-
-[params.assets]
-disableHLJS = true
-
-[markup.goldmark.renderer]
-unsafe = true
-
-[markup.highlight]
-noClasses = false
-
-[privacy.vimeo]
-disabled = false
-simple = true
-
-[privacy.twitter]
-disabled = false
-enableDNT = true
-simple = true
-
-[privacy.instagram]
-disabled = false
-simple = true
-
-[privacy.youtube]
-disabled = false
-privacyEnhanced = true
-
-[services.instagram]
-disableInlineCSS = true
-
-[services.twitter]
-disableInlineCSS = true
