added tech list for 23

--- a/config.toml
+++ b/config.toml
@@ -10,12 +10,19 @@ buildExpired = false
 enableEmoji = true
 pygmentsUseClasses = true
 
-
 [params.profileMode]
 enabled = false
 title = "papermod"
 imageUrl = "#"
 imageTitle = "my image"
+
+[[params.profileMode.buttons]]
+name = "Archives"
+url = "archives"
+
+[[params.profileMode.buttons]]
+name = "Tags"
+url = "tags"
 
 [params.homeInfoParams]
 Title = "devTech 23"
@@ -34,7 +41,6 @@ Content = """
 <br> &nbsp; &nbsp; &nbsp; &rarr; NextJS
 <br> &nbsp; &nbsp; &nbsp; &rarr; Testing Libraries(Cypress, Jest, Enzyme)
 </details>
-
 <details>
 <summary>&nbsp; Backend Development</summary>
 &nbsp; &nbsp; &nbsp; &rarr; NodeJS
@@ -45,20 +51,17 @@ Content = """
 <br> &nbsp; &nbsp; &nbsp; &rarr; SQL
 <br> &nbsp; &nbsp; &nbsp; &rarr; Java/C#/Python
 </details>
-
 <details>
 <summary>&nbsp; Mobile Development</summary>
 &nbsp; &nbsp; &nbsp; &rarr; React Native
 <br> &nbsp; &nbsp; &nbsp; &rarr; Google Firebase
 </details>
-
 <details>
 <summary>&nbsp; Development Tools</summary>
 &nbsp; &nbsp; &nbsp; &rarr; Figma
 <br> &nbsp; &nbsp; &nbsp; &rarr; Adobe XD
 <br> &nbsp; &nbsp; &nbsp; &rarr; Git Version Control
 </details>
-
 <details>
 <summary>&nbsp; Computer Science Core</summary>
 &nbsp; &nbsp; &nbsp; &rarr; Data Structures & Algorithms
@@ -66,3 +69,55 @@ Content = """
 <br> &nbsp; &nbsp; &nbsp; &rarr; Software Development Lifecycle
 </details>
 """
+
+[[params.socialIcons]]
+    
+    
+    
+    name = "github"                                         
+url = "https://github.com/Eric-Nobrega"
+                                                                                        
+[[params.socialIcons]]
+name = "KoFi"
+url = "https://ko-fi.com/adityatelange"
+
+[[params.socialIcons]]
+name = "Rss"
+url = "index.xml"
+
+[params.editPost]
+URL = "https://github.com/adityatelange/hugo-PaperMod/tree/exampleSite/content"
+Text = "Suggest Changes"
+appendFilePath = true
+
+[params.assets]
+disableHLJS = true
+
+[markup.goldmark.renderer]
+unsafe = true
+
+[markup.highlight]
+noClasses = false
+
+[privacy.vimeo]
+disabled = false
+simple = true
+
+[privacy.twitter]
+disabled = false
+enableDNT = true
+simple = true
+
+[privacy.instagram]
+disabled = false
+simple = true
+
+[privacy.youtube]
+disabled = false
+privacyEnhanced = true
+
+[services.instagram]
+disableInlineCSS = true
+
+[services.twitter]
+disableInlineCSS = true
